# MC-EKRT

./: CMakeLists.txt  LICENSE.txt  NOTICE.txt  README.md  average_energy.py  centrality_bins.csv  draw_1d.py  draw_dET_dy.py  draw_dNdET.py  draw_pt_oldMC.py  draw_pt_tata.py  fresh_install.txt  get_ets.py  jet_reader.cpp  main.cpp  makefile  output_params  p02_sjet.csv  p02_sjet_nPDF.csv  params  params_template  run_batch.py  script.sh
K_factor_testing/: draw_1d.py
data/: draw.py  draw_1d.py  draw_b_dist.py  draw_diff.py  draw_pt.py  draw_pt_oldMC.py  draw_pt_pA.py
include/: NNGrid.hpp  ars.hpp  generic_helpers.hpp  high_level_calcs.hpp  histo.hpp  histogram.hpp  io_helpers.hpp  linear_interpolator.hpp  linterp.h  nn_coll.hpp  nucleon.hpp  nucleus_generator.hpp  pqcd.hpp  typedefs.hpp  vwrapper.h
newdata/: draw_pt.py  draw_pt_pA.py  draw_pt_pA_y=0.py
src/: CMakeLists.txt  Tpp_builder.hpp  ars.cpp  ars.hpp  converged.h  eps09.cxx  generic_helpers.hpp  hcubature.cpp  high_level_calcs.hpp  histo.cpp  histo.hpp  histogram.cpp  io_helpers.hpp  linear_interpolator.cpp  linear_interpolator.hpp  mcaa.cpp  mcaa.hpp  nn_coll.cpp  nn_coll.hpp  nucleon.cpp  nucleon.hpp  nucleus_generator.cpp  nucleus_generator.hpp  pdf_builder.hpp  pqcd.cpp  pqcd.hpp  typedefs.hpp
